Stop topic boxes truncating text because of size

--- a/themes/modern/css/components/info-blocks.less
+++ b/themes/modern/css/components/info-blocks.less
@@ -97,7 +97,7 @@
 
 	.article-topic-info {
 		padding: 0.5rem;
-		height: 8rem;
+		min-height: 8rem;
 		width: 100%;
 		background: rgba(0,0,0,0.35);
 		color: white;
